5.0.12

5.0.11
- Bugfix: Do not run out of memory when escaping very large strings.
- Bugfix: Minimise the interference from the hosting CMS styles.
- Bugfix: Missing hidden property support for DatetimeImmutable.

5.0.10
- Bugfix: Remove all Unicode chars from the generated CSS for the
  smokygrey skin, because the TYPO3 asset collector does not
  support them anymore.

5.0.9
- Bugfix: Add the missing "kreXX Messages" to the translation.
- Bugfix: Remove HTML tags from the shell output.
- Bugfix: Added a missing closing tag to both skins.

5.0.8
- Bugfix: The serialized string analysis was not thorough enough
  to detect all possible candidates.

5.0.7
- Bugfix: The XML analysis does not recognise a broken XML string.
- Bugfix: The scalar analysis does not return the output from the
  start event when there is no meta to display.
- Bugfix: The serialized string analysis was too strict to detect
  all possible candidates.
- Bugfix: The method return type analysis prefixes 'self' with a
  backslash.

5.0.6
- Added the handling of type casting to the regex getter analysis.
- Bugfix: Removed some self:: references.
- Bugfix: Better looking exclamation mark for the SmokyGrey skin.
- Bugfix: The dragging of the kreXX output window may not work under
  certain circumstances.

5.0.5
- Added formatting for float values for better readability.
- Added an event to the output of the inline js and css.
- Bugfix: Make sure that the JS only executes once.

5.0.4
- Change: Made implicitly nullable parameter declarations explicitly nullable.
- Bugfix: Catch a Throwable in the ProcessInteger.
- Bugfix: Better Base64 detection.
- Bugfix: The error handler was not removed in the file reader.
- Bugfix: The no-js feedback handles CSP headers.
- Bugfix: The translations are located in a div in the header.
- Bugfix: Missing BOM encoding in the code generation.

5.0.3
- Bugfix: Possible warning in file reader.
- Bugfix: Possible fatals in the file reader.